fixed common locales

--- a/apps/storefront/public/locales/mn/common.json
+++ b/apps/storefront/public/locales/mn/common.json
@@ -3,15 +3,15 @@
 	"CHAWKBAZAR_ERROR.EMPTY_MOBILE_NUMBER": "Гар утасны дугаараа оруулна уу",
 	"CHAWKBAZAR_ERROR.INSUFFICIENT_BALANCE": "Үлдэгдэл хангалтгүй",
 	"CHAWKBAZAR_ERROR.INVALID_CREDENTIALS": "Хэрэгэлэгчийн нэр эсвэл нууц үг буруу",
-	"CHAWKBAZAR_ERROR.NOT_AUTHORIZED": "Зөвшөөрөлгүй",
-	"CHAWKBAZAR_ERROR.NOT_FOUND": "Имэйл хаягийг ямар ч хэрэглэгчийн бүртгэлд өгөөгүй",
-	"CHAWKBAZAR_ERROR.OPERATION_NOT": "Үйл ажиллагаа Үгүй",
+	"CHAWKBAZAR_ERROR.NOT_AUTHORIZED": "Хандах эрхгүй байна",
+	"CHAWKBAZAR_ERROR.NOT_FOUND": "Имэйл хаяг бүртгэлгүй байна",
+	"CHAWKBAZAR_ERROR.OPERATION_NOT": "Үйлдэл хийх боломжгүй байна",
 	"CHAWKBAZAR_ERROR.OTP_SEND_FAIL": "OTP илгээж чадсангүй",
 	"CHAWKBAZAR_ERROR.OTP_VERIFICATION_FAILED": "OTP баталгаажуулалт амжилтгүй боллоо",
-	"CHAWKBAZAR_ERROR.PAYMENT_FAILED": "Төлбөр амжилтгүй боллоо",
+	"CHAWKBAZAR_ERROR.PAYMENT_FAILED": "Төлбөр төлөлт амжилтгүй боллоо",
 	"CHAWKBAZAR_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "Facebook эсвэл Google ашиглан нэвтэрнэ үү",
 	"CHAWKBAZAR_ERROR.SHOP_NOT_APPROVED": "Дэлгүүр зөвшөөрөгдөөгүй",
-	"CHAWKBAZAR_ERROR.SOMETHING_WENT_WRONG": "Ямар нэгэн зүйл буруугаар эргэсэн",
+	"CHAWKBAZAR_ERROR.SOMETHING_WENT_WRONG": "Ямар нэгэн алдаа гарлаа",
 	"CHAWKBAZAR_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "Татан авалтыг дэлгүүрт хавсаргасан байх ёстой",
 	"CHAWKBAZAR_MESSAGE.CHECK_INBOX_FOR_PASSWORD_RESET_EMAIL": "Нууц үг шинэчлэх имэйлийг ирсэн имэйлээс шалгана уу",
 	"CHAWKBAZAR_MESSAGE.EMAIL_SENT_SUCCESSFUL": "Имэйлийг амжилттай илгээсэн",
@@ -95,7 +95,7 @@
 	"text-add-to-cart": "Картанд нэмэх",
 	"text-address": "Хаяг",
 	"text-address-colon": "Хаяг:",
-	"text-address-details": "Шуудангийн хайрцаг 14122 Коллинз гудамж West.Victoria",
+	"text-address-details": "Шуудангийн хайрцаг БЗД 42-р хороо",
 	"text-and": "болон",
 	"text-app-thumbnail": "Аппын өнгөц зураг",
 	"text-apply": "Өргөдөл гаргах",
@@ -145,14 +145,14 @@
 	"text-discount-label": "Хямдралтай",
 	"text-discount-tag": "1000 сая шинэ бараа: Нэмэлт 20% хямдралтай. Сонгосон зүйлс. Тэмдэглэгдсэн үнэ.",
 	"text-email": "И-мэйл",
-	"text-email-details": "example@example.com",
+	"text-email-details": "info@mindbank.mn",
 	"text-empty-cart": "Таны карт хоосон байна.",
 	"text-enter-coupon": "Купон кодыг энд оруулна уу",
 	"text-exclusive": "Онцгой",
 	"text-facebook": "Facebook",
 	"text-fashion": "Загвар",
 	"text-featured-categories": "Онцолсон ангилалууд",
-	"text-featured-products": "Онцлох бүтээгдэхүүн",
+	"text-featured-products": "Онцлох эвэнтүүд",
 	"text-filters": "Шүүлтүүрүүд",
 	"text-find-us-here": "Биднийг эндээс олоорой",
 	"text-flash-sale": "Флаш хямдрал",
@@ -184,7 +184,7 @@
 	"text-new-arrivals": "Шинээр ирсэн",
 	"text-new-year": "Шинэ он",
 	"text-newest": "Хамгийн шинэ",
-	"text-newsletter-subtitle": "ChawkBazar-д бүртгүүлж, шинэ бараа, тусгай санал, урамшууллын талаар мэдээлэл аваарай.",
+	"text-newsletter-subtitle": "Mindbank event-д бүртгүүлж, шинэ үйл ажиллагаанууд, урамшууллын талаар мэдээлэл аваарай.",
 	"text-newsletter-title": "Мөн шинэ цуглуулгын саналыг аваарай",
 	"text-no-account": "Бүртгэлгүй юу?",
 	"text-no-address": "Хаяг олдсонгүй",
@@ -229,7 +229,7 @@
 	"text-pay-first": "Эхлээд төлнө үү",
 	"text-payment-method": "Төлбөрийн нөхцөл",
 	"text-phone": "Утас",
-	"text-phone-details": "+1 1234 5678 90, +1 0987 6543 21",
+	"text-phone-details": "+97660066666, +97660066660",
 	"text-policy": "Бодлого",
 	"text-popularity": "Алдартай байдал",
 	"text-price": "Үнэ",
