--- a/apps/dashboard/public/locales/mn/common.json
+++ b/apps/dashboard/public/locales/mn/common.json
@@ -153,49 +153,49 @@
 	"text-image": "Зураг",
 	"text-img-format": "PNG, JPG",
 	"text-import-attributes": "Импортын шинж чанарууд",
-	"text-import-product-variations": "",
+	"text-import-product-variations": "Импортын бүтээгдэхүүний хувилбарууд",
 	"text-import-products": "Импортын бүтээгдэхүүн",
 	"text-inactive": "Идэвхгүй",
 	"text-items-sold": "Худалдсан зүйлс",
-	"text-less": "",
-	"text-loading": "",
-	"text-logo": "",
-	"text-map-cant-load": "",
+	"text-less": "Бага",
+	"text-loading": "Ачааж байна...",
+	"text-logo": "Лого",
+	"text-map-cant-load": "Газрын зургийг яг одоо ачаалах боломжгүй, уучлаарай.",
 	"text-name": "Нэр",
-	"text-no-address": "",
-	"text-no-contact": "",
-	"text-no-shop": "",
-	"text-note": "",
-	"text-on-hold": "",
-	"text-or": "",
-	"text-others": "",
-	"text-payment-info": "",
-	"text-payment-method": "",
-	"text-pending": "",
-	"text-permission-message": "",
-	"text-processing": "",
+	"text-no-address": "Хаяг олдсонгүй",
+	"text-no-contact": "Холбоо барих дугаар алга",
+	"text-no-shop": "Дэлгүүр олдсонгүй",
+	"text-note": "тэмдэглэл",
+	"text-on-hold": "Хүлээлтэнд байна",
+	"text-or": "эсвэл",
+	"text-others": "Бусад",
+	"text-payment-info": "Төлбөрийн мэдээлэл",
+	"text-payment-method": "Төлбөрийн нөхцөл",
+	"text-pending": "Хүлээгдэж байна",
+	"text-permission-message": "Таны дэлгүүр хараахан идэвхжээгүй байна. Та цаашдын үйлдлийг үргэлжлүүлэх боломжгүй.",
+	"text-processing": "Боловсруулж байна",
 	"text-products": "Бүтээгдэхүүн",
-	"text-px": "",
+	"text-px": "px",
 	"text-read-more": "Цааш унших",
-	"text-registered-since": "",
-	"text-rejected": "",
-	"text-return-home": "",
-	"text-revenue": "",
-	"text-shop-approve-button": "",
-	"text-shop-approve-description": "",
-	"text-shop-approve-title": "",
-	"text-shop-dashboard": "",
-	"text-status": "",
-	"text-total-orders": "",
-	"text-total-products": "",
-	"text-upload-highlight": "",
-	"text-upload-message": "",
-	"text-view": "",
-	"text-visit-shop": "",
-	"text-withdrawal-info": "",
-	"token-required": "",
-	"type-required": "",
-	"update-success": "",
-	"user-avatar": "",
-	"variation-options-imported-successfully": ""
+	"text-registered-since": "Бүртгэгдсэн цагаас хойш",
+	"text-rejected": "Татгалзсан",
+	"text-return-home": "Гэртээ буцах",
+	"text-revenue": "Орлого",
+	"text-shop-approve-button": "Илгээх",
+	"text-shop-approve-description": "Чи итгэлтэй байна уу?",
+	"text-shop-approve-title": "Дэлгүүрийг зөвшөөрөхгүй",
+	"text-shop-dashboard": "Хяналтын самбарыг харах",
+	"text-status": "Статус",
+	"text-total-orders": "Нийт захиалга",
+	"text-total-products": "Нийт бүтээгдэхүүн",
+	"text-upload-highlight": "Зураг байршуулах",
+	"text-upload-message": "эсвэл чирэх, буулгах",
+	"text-view": "Харах",
+	"text-visit-shop": "Дэлгүүрт зочилно уу",
+	"text-withdrawal-info": "Татгалзах мэдээлэл",
+	"token-required": "Та токен хаягаа оруулах шаардлагатай",
+	"type-required": "Төрөл шаардлагатай",
+	"update-success": "Амжилттай шинэчлэгдсэн!",
+	"user-avatar": "хэрэглэгчийн аватар",
+	"variation-options-imported-successfully": "Хувилбарын сонголтуудыг амжилттай импортлов"
 }
