--- a/apps/dashboard/public/locales/mn/form.json
+++ b/apps/dashboard/public/locales/mn/form.json
@@ -1,206 +1,206 @@
 {
-	"avatar-help-text": "",
-	"banner-slider-help-text": "",
-	"button-label-add": "",
-	"button-label-add-banner": "",
-	"button-label-add-categories": "",
-	"button-label-add-category": "",
-	"button-label-add-coupon": "",
-	"button-label-add-customer": "",
-	"button-label-add-delivery-time": "",
-	"button-label-add-group": "",
-	"button-label-add-option": "",
-	"button-label-add-order-status": "",
-	"button-label-add-product": "",
-	"button-label-add-social": "",
-	"button-label-add-staff": "",
-	"button-label-add-tag": "",
-	"button-label-add-tax": "",
-	"button-label-add-type": "",
-	"button-label-add-types": "",
-	"button-label-add-value": "",
-	"button-label-add-withdraw": "",
-	"button-label-back": "",
-	"button-label-change": "",
-	"button-label-change-password": "",
-	"button-label-change-status": "",
-	"button-label-create-customer": "",
-	"button-label-login": "",
-	"button-label-order-status": "",
-	"button-label-remove": "",
-	"button-label-save": "",
-	"button-label-save-settings": "",
-	"button-label-send": "",
-	"button-label-shipping": "",
-	"button-label-submit": "",
-	"button-label-tax": "",
-	"button-label-update": "",
-	"button-label-update-category": "",
-	"button-label-update-coupon": "",
-	"button-label-update-group": "",
-	"button-label-update-product": "",
-	"button-label-update-tag": "",
-	"button-label-update-withdraw": "",
-	"category-description-helper-text": "",
-	"category-image-helper-text": "",
-	"coupon-active-from": "",
-	"coupon-expire-at": "",
-	"coupon-form-info-help-text": "",
-	"coupon-image-helper-text": "",
-	"cover-image-dimension-help-text": "",
-	"create-new-attribute": "",
-	"create-new-attribute-value": "",
-	"customer-form-info-help-text": "",
-	"delivery-schedule-help-text": "",
-	"edit-attribute": "",
-	"error-account-must-number": "",
-	"error-active-date-required": "",
-	"error-admin-commission": "",
-	"error-amount-must-number": "",
-	"error-amount-must-positive": "",
-	"error-amount-number": "",
-	"error-amount-required": "",
-	"error-attribute-required": "",
-	"error-color-required": "",
-	"error-confirm-password": "",
-	"error-coupon-code-required": "",
-	"error-credential-wrong": "",
-	"error-currency-required": "",
-	"error-email-format": "",
-	"error-email-required": "",
-	"error-email-string": "",
-	"error-enough-permission": "",
-	"error-expire-date-required": "",
-	"error-match-passwords": "",
-	"error-min-one-banner": "",
-	"error-name-required": "",
-	"error-old-password-required": "",
-	"error-password-required": "",
-	"error-price-must-number": "",
-	"error-price-must-positive": "",
-	"error-price-required": "",
-	"error-product-card-required": "",
-	"error-product-type-required": "",
-	"error-quantity-must-integer": "",
-	"error-quantity-must-number": "",
-	"error-quantity-must-positive": "",
-	"error-quantity-required": "",
-	"error-rate-must-integer": "",
-	"error-rate-must-number": "",
-	"error-rate-must-positive": "",
-	"error-rate-required": "",
-	"error-sale-price-less-number": "",
-	"error-sale-price-must-positive": "",
-	"error-serial-must-integer": "",
-	"error-serial-must-positive": "",
-	"error-serial-required": "",
-	"error-sku-required": "",
-	"error-specify-number": "",
-	"error-status-required": "",
-	"error-title-required": "",
-	"error-token-required": "",
-	"error-type-required": "",
-	"error-unit-required": "",
-	"featured-image-help-text": "",
-	"featured-image-title": "",
-	"form-description-attribute-name": "",
-	"form-description-attribute-value": "",
-	"form-description-product-type": "",
-	"form-description-simple-product-info": "",
-	"form-description-staff-info": "",
-	"form-description-variation-product-info": "",
-	"form-title-create-category": "",
-	"form-title-create-coupon": "",
-	"form-title-create-customer": "",
-	"form-title-create-order-status": "",
-	"form-title-create-product": "",
-	"form-title-create-shipping": "",
-	"form-title-create-shop": "",
-	"form-title-create-staff": "",
-	"form-title-create-tag": "",
-	"form-title-create-tax": "",
-	"form-title-create-type": "",
-	"form-title-create-withdraw": "",
-	"form-title-edit-category": "",
-	"form-title-edit-coupon": "",
-	"form-title-edit-order-status": "",
-	"form-title-edit-product": "",
-	"form-title-edit-type": "",
-	"form-title-forgot-password": "",
-	"form-title-information": "",
-	"form-title-options": "",
+	"avatar-help-text": "Өөрийн профайл зургаа эндээс байршуулна уу. Аватарын хэмжээ 140 x 140px байх ёстой",
+	"banner-slider-help-text": "Эндээс гарчиг, тайлбар бүхий баннер зургаа нэмнэ үү. Баннерын хэмжээ нь бүтэн дэлгэцийн баннерын хувьд 1920 х 1080 пиксел, жижиг баннерын хувьд 1500 х 450 пикселийн хэмжээтэй байх ёстой.",
+	"button-label-add": "Нэмэх",
+	"button-label-add-banner": "Баннер нэмэх",
+	"button-label-add-categories": "Ангилал нэмэх",
+	"button-label-add-category": "Ангилал нэмэх",
+	"button-label-add-coupon": "Купон нэмэх",
+	"button-label-add-customer": "Хэрэглэгч нэмэх",
+	"button-label-add-delivery-time": "Хүргэлтийн хугацааг нэмнэ үү",
+	"button-label-add-group": "Бүлэг нэмэх",
+	"button-label-add-option": "Сонголт нэмнэ үү",
+	"button-label-add-order-status": "Захиалгын статус нэмэх",
+	"button-label-add-product": "Бүтээгдэхүүн нэмэх",
+	"button-label-add-social": "Нийгмийн шинэ профайл нэмэх",
+	"button-label-add-staff": "Ажилтан нэмэх",
+	"button-label-add-tag": "Шошго нэмэх",
+	"button-label-add-tax": "Татвар нэмэх",
+	"button-label-add-type": "Төрөл нэмэх",
+	"button-label-add-types": "Төрөл нэмэх",
+	"button-label-add-value": "Үнэ цэнэ нэмэх",
+	"button-label-add-withdraw": "Татгалзах хүсэлт",
+	"button-label-back": "Буцах",
+	"button-label-change": "Өөрчлөлт",
+	"button-label-change-password": "Нууц үгээ солих",
+	"button-label-change-status": "Статус өөрчлөх",
+	"button-label-create-customer": "Хэрэглэгч үүсгэх",
+	"button-label-login": "Нэвтрэх",
+	"button-label-order-status": "Захиалгын байдал",
+	"button-label-remove": "Устгах",
+	"button-label-save": "Хадгалах",
+	"button-label-save-settings": "Тохиргоог хадгалах",
+	"button-label-send": "Илгээх",
+	"button-label-shipping": "Хүргэлт",
+	"button-label-submit": "Илгээх",
+	"button-label-tax": "Татвар",
+	"button-label-update": "Шинэчлэх",
+	"button-label-update-category": "Ангилалыг шинэчлэх",
+	"button-label-update-coupon": "Купоныг шинэчлэх",
+	"button-label-update-group": "Бүлгийг шинэчлэх",
+	"button-label-update-product": "Бүтээгдэхүүнийг шинэчлэх",
+	"button-label-update-tag": "Tag шинэчлэх",
+	"button-label-update-withdraw": "Татаж авахыг шинэчлэх",
+	"category-description-helper-text": "өөрийн ангиллын дэлгэрэнгүй мэдээлэл болон шаардлагатай мэдээллийг эндээс авна уу",
+	"category-image-helper-text": "Ангиллынхаа зургийг энд байршуулна уу",
+	"coupon-active-from": "Идэвхтэй",
+	"coupon-expire-at": "Хугацаа дуусах болно",
+	"coupon-form-info-help-text": "таны купоны тайлбар болон шаардлагатай мэдээллийг эндээс авна уу",
+	"coupon-image-helper-text": "Та купоны зургаа энд байршуулна уу",
+	"cover-image-dimension-help-text": "Хавтасны зургийн хэмжээ нь байх ёстой",
+	"create-new-attribute": "Шинэ атрибут үүсгэх",
+	"create-new-attribute-value": "Шинэ атрибутын утга үүсгэх",
+	"customer-form-info-help-text": "Эндээс харилцагчийн мэдээллээ нэмээд шинэ хэрэглэгч үүсгэнэ үү",
+	"delivery-schedule-help-text": "Эндээс зохих тайлбар бүхий хүргэлтийн хуваарь цагаа нэмнэ үү",
+	"edit-attribute": "Аттрибутыг засах",
+	"error-account-must-number": "Бүртгэл нь дугаар байх ёстой",
+	"error-active-date-required": "Та идэвхтэй огноог тохируулах ёстой",
+	"error-admin-commission": "Та комиссын хувь хэмжээгээ тохируулах хэрэгтэй",
+	"error-amount-must-number": "Дүн нь тоо байх ёстой",
+	"error-amount-must-positive": "Тоо хэмжээ эерэг байх ёстой",
+	"error-amount-number": "Дүн нь тоо байх ёстой",
+	"error-amount-required": "Та хэмжээг тогтоох ёстой",
+	"error-attribute-required": "Аттрибут шаардлагатай",
+	"error-color-required": "Өнгө шаардлагатай",
+	"error-confirm-password": "Нууц үгээ баталгаажуулна уу!",
+	"error-coupon-code-required": "Код шаардлагатай",
+	"error-credential-wrong": "Итгэмжлэх жуух бичиг буруу байсан!",
+	"error-currency-required": "Валют шаардлагатай",
+	"error-email-format": "Өгөгдсөн имэйл хаягийн формат буруу байна",
+	"error-email-required": "Та имэйл хаягаа оруулах шаардлагатай",
+	"error-email-string": "Имэйл мөр байх ёстой",
+	"error-enough-permission": "Хангалттай зөвшөөрөлгүй байна",
+	"error-expire-date-required": "Та дуусах хугацааг тохируулах ёстой",
+	"error-match-passwords": "Нууц үг таарах ёстой!",
+	"error-min-one-banner": "Дор хаяж нэг баннер нэмнэ үү",
+	"error-name-required": "Нэр оруулах шаардлагатай",
+	"error-old-password-required": "Хуучин нууц үг шаардлагатай!",
+	"error-password-required": "Нууц үг шаардлагатай!",
+	"error-price-must-number": "Үнэ нь тоо байх ёстой",
+	"error-price-must-positive": "Үнэ эерэг байх ёстой",
+	"error-price-required": "Үнэ шаардлагатай",
+	"error-product-card-required": "Бүтээгдэхүүний картыг сонгоно уу",
+	"error-product-type-required": "Бүтээгдэхүүний төрөл шаардлагатай",
+	"error-quantity-must-integer": "Тоо хэмжээ нь бүхэл тоо байх ёстой",
+	"error-quantity-must-number": "Тоо хэмжээ нь тоо байх ёстой",
+	"error-quantity-must-positive": "Тоо хэмжээ эерэг байх ёстой",
+	"error-quantity-required": "Тоо хэмжээ шаардлагатай",
+	"error-rate-must-integer": "Үнэлгээ нь бүхэл тоо байх ёстой",
+	"error-rate-must-number": "Үнэ нь тоо байх ёстой",
+	"error-rate-must-positive": "Үнэ эерэг байх ёстой",
+	"error-rate-required": "Үнэ шаардлагатай",
+	"error-sale-price-less-number": "Борлуулалтын үнэ -ээс бага байх ёстой",
+	"error-sale-price-must-positive": "Борлуулалтын үнэ эерэг байх ёстой",
+	"error-serial-must-integer": "Цуваа нь бүхэл тоо байх ёстой",
+	"error-serial-must-positive": "Цуврал эерэг байх ёстой",
+	"error-serial-required": "Цуврал шаардлагатай",
+	"error-sku-required": "SKU шаардлагатай",
+	"error-specify-number": "Та дугаар зааж өгөх ёстой",
+	"error-status-required": "Статус шаардлагатай",
+	"error-title-required": "Гарчиг шаардлагатай",
+	"error-token-required": "Токен шаардлагатай!",
+	"error-type-required": "Төрөл шаардлагатай",
+	"error-unit-required": "Нэгж шаардлагатай",
+	"featured-image-help-text": "Бүтээгдэхүүнийхээ онцолсон зургийг энд байршуулна уу",
+	"featured-image-title": "Онцлох зураг",
+	"form-description-attribute-name": "таны шинж чанарын нэр болон шаардлагатай мэдээллийг эндээс авна уу",
+	"form-description-attribute-value": "таны шинж чанарын үнэ цэнэ болон шаардлагатай мэдээллийг эндээс авна уу",
+	"form-description-product-type": "Бүтээгдэхүүний төрлийн маягтыг эндээс сонгоно уу",
+	"form-description-simple-product-info": "Таны энгийн бүтээгдэхүүний тодорхойлолт, шаардлагатай мэдээллийг эндээс авна уу",
+	"form-description-staff-info": "Ажилтны мэдээллээ нэмээд эндээс шинэ ажилтан үүсгэнэ үү",
+	"form-description-variation-product-info": "таны бүтээгдэхүүний өөрчлөлт, шаардлагатай мэдээллийг эндээс авна уу",
+	"form-title-create-category": "Шинэ ангилал үүсгэх",
+	"form-title-create-coupon": "Шинэ купон үүсгэх",
+	"form-title-create-customer": "Шинэ харилцагч үүсгэх",
+	"form-title-create-order-status": "Захиалгын статус үүсгэх",
+	"form-title-create-product": "Шинэ бүтээгдэхүүн үүсгэх",
+	"form-title-create-shipping": "Шинэ хүргэлт үүсгэх",
+	"form-title-create-shop": "Дэлгүүр үүсгэх",
+	"form-title-create-staff": "Ажилтан үүсгэх",
+	"form-title-create-tag": "Tag үүсгэх",
+	"form-title-create-tax": "Шинэ татвар бий болгох",
+	"form-title-create-type": "Шинэ бүлэг үүсгэх",
+	"form-title-create-withdraw": "Татан авалт үүсгэх",
+	"form-title-edit-category": "Ангилал засах",
+	"form-title-edit-coupon": "Купон засварлах",
+	"form-title-edit-order-status": "Захиалгын статусыг засах",
+	"form-title-edit-product": "Бүтээгдэхүүнийг засах",
+	"form-title-edit-type": "Төрөл засах",
+	"form-title-forgot-password": "Нууц үгээ мартсан",
+	"form-title-information": "мэдээлэл",
+	"form-title-options": "Сонголтууд",
 	"form-title-permission": "Permission",
-	"form-title-product-type": "",
-	"form-title-profile-settings": "",
-	"form-title-settings": "",
-	"form-title-simple-product-info": "",
-	"form-title-update-customer": "",
-	"form-title-update-shipping": "",
-	"form-title-update-tax": "",
-	"form-title-variant": "",
-	"form-title-variation-added": "",
-	"form-title-variation-product-info": "",
-	"gallery-help-text": "",
-	"gallery-title": "",
-	"group-description-help-text": "",
-	"group-settings": "",
-	"group-settings-help-text": "",
-	"image-drag-n-drop-title": "",
-	"image-uploader-title": "",
-	"input-banner": "",
-	"input-delivery-time-description": "",
-	"input-delivery-time-title": "",
-	"input-description": "",
-	"input-forgot-password-label": "",
-	"input-gallery": "",
-	"input-label-account-holder-email": "",
-	"input-label-account-holder-name": "",
-	"input-label-account-number": "",
-	"input-label-admin-commission-rate": "",
-	"input-label-amount": "",
-	"input-label-attribute-name": "",
-	"input-label-attribute-value": "",
-	"input-label-autocomplete": "",
-	"input-label-avatar": "",
-	"input-label-bank-name": "",
-	"input-label-bio": "",
-	"input-label-canonical-url": "",
-	"input-label-categories": "",
-	"input-label-city": "",
-	"input-label-code": "",
-	"input-label-color": "",
-	"input-label-confirm-password": "",
-	"input-label-contact": "",
-	"input-label-country": "",
-	"input-label-coupons": "",
-	"input-label-currency": "",
-	"input-label-customers": "",
-	"input-label-description": "",
-	"input-label-details": "",
-	"input-label-disable-variant": "",
-	"input-label-draft": "",
-	"input-label-email": "",
-	"input-label-fixed": "",
-	"input-label-free": "",
-	"input-label-group": "",
-	"input-label-height": "",
-	"input-label-image": "",
-	"input-label-is-home": "",
-	"input-label-layout-type": "",
-	"input-label-length": "",
-	"input-label-logo": "",
-	"input-label-meta": "",
-	"input-label-meta-description": "",
-	"input-label-meta-tags": "",
-	"input-label-meta-title": "",
-	"input-label-min-order-amount": "",
-	"input-label-name": "",
-	"input-label-new-password": "",
-	"input-label-note": "",
-	"input-label-og-description": "",
-	"input-label-og-image": "",
-	"input-label-og-title": "",
-	"input-label-old-password": "",
+	"form-title-product-type": "Бүтээгдэхүүний төрөл",
+	"form-title-profile-settings": "Профайлын тохиргоо",
+	"form-title-settings": "Тохиргоо",
+	"form-title-simple-product-info": "Бүтээгдэхүүний энгийн мэдээлэл",
+	"form-title-update-customer": "Хэрэглэгчийг шинэчлэх",
+	"form-title-update-shipping": "Хүргэлтийг шинэчлэх",
+	"form-title-update-tax": "Татварыг шинэчлэх",
+	"form-title-variant": "Хувилбар",
+	"form-title-variation-added": "Хувилбар нэмсэн",
+	"form-title-variation-product-info": "Бүтээгдэхүүний өөрчлөлтийн мэдээлэл",
+	"gallery-help-text": "Бүтээгдэхүүний зургийн цомгийг энд байршуулна уу",
+	"gallery-title": "Галерей",
+	"group-description-help-text": "таны бүлгийн тодорхойлолт болон шаардлагатай мэдээллийг эндээс авна уу",
+	"group-settings": "Бүлэгтэй холбоотой тохиргоог сонгоно уу",
+	"group-settings-help-text": "Шаардлагатай тохиргоог сонгосон эсэхээ шалгана уу",
+	"image-drag-n-drop-title": "эсвэл чирэх, буулгах",
+	"image-uploader-title": "Зураг байршуулах",
+	"input-banner": "Баннер",
+	"input-delivery-time-description": "Тайлбар",
+	"input-delivery-time-title": "Гарчиг/Цаг",
+	"input-description": "Тайлбар",
+	"input-forgot-password-label": "Нууц үгээ мартсан?",
+	"input-gallery": "Галерей",
+	"input-label-account-holder-email": "Данс эзэмшигчийн имэйл",
+	"input-label-account-holder-name": "Дансны эзэмшигчийн нэр",
+	"input-label-account-number": "Дансны дугаар",
+	"input-label-admin-commission-rate": "Админд зориулсан комиссын хувь хэмжээ",
+	"input-label-amount": "Хэмжээ",
+	"input-label-attribute-name": "Аттрибутын нэр",
+	"input-label-attribute-value": "Атрибутын утга",
+	"input-label-autocomplete": "Газрын зургаас байршлыг тохируулах",
+	"input-label-avatar": "Аватар",
+	"input-label-bank-name": "банкны нэр",
+	"input-label-bio": "Био",
+	"input-label-canonical-url": "Каноник URL",
+	"input-label-categories": "Ангилалууд",
+	"input-label-city": "Хот",
+	"input-label-code": "Код",
+	"input-label-color": "өнгө",
+	"input-label-confirm-password": "нууц үгийг баталгаажуулах",
+	"input-label-contact": "Холбогдох дугаар",
+	"input-label-country": "Улс",
+	"input-label-coupons": "Купон",
+	"input-label-currency": "Валют",
+	"input-label-customers": "Үйлчлүүлэгчид",
+	"input-label-description": "Тайлбар",
+	"input-label-details": "Дэлгэрэнгүй мэдээлэл",
+	"input-label-disable-variant": "Энэ хувилбарыг идэвхгүй болгох",
+	"input-label-draft": "Ноорог",
+	"input-label-email": "И-мэйл",
+	"input-label-fixed": "Тогтмол",
+	"input-label-free": "Үнэгүй",
+	"input-label-group": "Бүлэг",
+	"input-label-height": "Өндөр",
+	"input-label-image": "Зураг",
+	"input-label-is-home": "Main Homepge мөн үү?",
+	"input-label-layout-type": "Layout-г сонгоно уу",
+	"input-label-length": "Урт",
+	"input-label-logo": "Лого",
+	"input-label-meta": "Мета",
+	"input-label-meta-description": "Мета тайлбар",
+	"input-label-meta-tags": "Мета шошго",
+	"input-label-meta-title": "Мета гарчиг",
+	"input-label-min-order-amount": "Захиалгын хамгийн бага хэмжээ",
+	"input-label-name": "Нэр",
+	"input-label-new-password": "Шинэ нууц үг",
+	"input-label-note": "тэмдэглэл",
+	"input-label-og-description": "OG Тодорхойлолт",
+	"input-label-og-image": "OG зураг",
+	"input-label-og-title": "OG Гарчиг",
+	"input-label-old-password": "Хуучин нууц үг",
 	"input-label-order-id": "",
 	"input-label-order-status": "",
 	"input-label-orders": "",
