--- a/apps/dashboard/public/locales/mn/table.json
+++ b/apps/dashboard/public/locales/mn/table.json
@@ -43,7 +43,7 @@
 	"table-item-total-products": "",
 	"table-item-tracking-number": "",
 	"table-item-type": "",
-	"table-item-unit": "",
+	"table-item-unit": "Үнэ/нэгж",
 	"table-item-values": "",
 	"table-item-zip": "",
 	"withdraw-table-title": ""
