complete dashboard locale

--- a/apps/dashboard/public/locales/mn/table.json
+++ b/apps/dashboard/public/locales/mn/table.json
@@ -1,50 +1,50 @@
 {
-	"empty-table-data": "",
-	"popular-products-table-title": "",
-	"recent-order-table-title": "",
-	"table-item-actions": "",
-	"table-item-active": "",
-	"table-item-amount": "",
-	"table-item-avatar": "",
-	"table-item-banner": "",
-	"table-item-city": "",
-	"table-item-code": "",
-	"table-item-country": "",
-	"table-item-created-at": "",
-	"table-item-delivery-fee": "",
-	"table-item-description": "",
-	"table-item-details": "",
-	"table-item-email": "",
-	"table-item-expired": "",
-	"table-item-global": "",
-	"table-item-group": "",
-	"table-item-icon": "",
+	"empty-table-data": "Өгөгдөл олдсонгүй",
+	"popular-products-table-title": "Алдартай бүтээгдэхүүн",
+	"recent-order-table-title": "сүүлийн үеийн захиалга",
+	"table-item-actions": "Үйлдэл",
+	"table-item-active": "Идэвхтэй",
+	"table-item-amount": "Хэмжээ",
+	"table-item-avatar": "Аватар",
+	"table-item-banner": "Баннер",
+	"table-item-city": "Хот",
+	"table-item-code": "Код",
+	"table-item-country": "Улс",
+	"table-item-created-at": "Үүсгэсэн",
+	"table-item-delivery-fee": "Хүргэлтийн хураамж",
+	"table-item-description": "Тайлбар",
+	"table-item-details": "Дэлгэрэнгүй мэдээлэл",
+	"table-item-email": "И-мэйл",
+	"table-item-expired": "Хугацаа нь дууссан",
+	"table-item-global": "Глобал",
+	"table-item-group": "Бүлэг",
+	"table-item-icon": "Дүрс",
 	"table-item-id": "ID",
-	"table-item-image": "",
-	"table-item-logo": "",
-	"table-item-note": "",
-	"table-item-order-date": "",
-	"table-item-owner-name": "",
-	"table-item-payment-method": "",
-	"table-item-products": "",
-	"table-item-quantity": "",
-	"table-item-rate": "",
-	"table-item-serial": "",
-	"table-item-shipping-address": "",
-	"table-item-shop": "",
-	"table-item-shop-id": "",
-	"table-item-shop-name": "",
-	"table-item-slug": "",
-	"table-item-state": "",
-	"table-item-status": "",
-	"table-item-title": "",
-	"table-item-total": "",
-	"table-item-total-orders": "",
-	"table-item-total-products": "",
-	"table-item-tracking-number": "",
-	"table-item-type": "",
+	"table-item-image": "Зураг",
+	"table-item-logo": "Лого",
+	"table-item-note": "тэмдэглэл",
+	"table-item-order-date": "Захиалгын огноо",
+	"table-item-owner-name": "Эзэмшигчийн нэр",
+	"table-item-payment-method": "Төлбөрийн нөхцөл",
+	"table-item-products": "Бүтээгдэхүүн",
+	"table-item-quantity": "Тоо хэмжээ",
+	"table-item-rate": "Үнэлгээ",
+	"table-item-serial": "Цуврал",
+	"table-item-shipping-address": "Хүргэлтийн хаяг",
+	"table-item-shop": "Дэлгүүр",
+	"table-item-shop-id": "Дэлгүүрийн ID",
+	"table-item-shop-name": "Дэлгүүрийн нэр",
+	"table-item-slug": "Слаг",
+	"table-item-state": "Муж",
+	"table-item-status": "Статус",
+	"table-item-title": "Нэр",
+	"table-item-total": "нийт",
+	"table-item-total-orders": "Захиалга",
+	"table-item-total-products": "Бүтээгдэхүүн",
+	"table-item-tracking-number": "Хяналтын дугаар",
+	"table-item-type": "Төрөл",
 	"table-item-unit": "Үнэ/нэгж",
-	"table-item-values": "",
-	"table-item-zip": "",
-	"withdraw-table-title": ""
+	"table-item-values": "Үнэ цэнэ",
+	"table-item-zip": "ZIP",
+	"withdraw-table-title": "Саяхны буцаан таталтууд"
 }
