--- a/apps/dashboard/public/locales/mn/form.json
+++ b/apps/dashboard/public/locales/mn/form.json
@@ -201,97 +201,97 @@
 	"input-label-og-image": "OG зураг",
 	"input-label-og-title": "OG Гарчиг",
 	"input-label-old-password": "Хуучин нууц үг",
-	"input-label-order-id": "",
-	"input-label-order-status": "",
-	"input-label-orders": "",
-	"input-label-parent-category": "",
-	"input-label-password": "",
-	"input-label-payment-method": "",
-	"input-label-percentage": "",
-	"input-label-price": "",
-	"input-label-product-card-type": "",
-	"input-label-products": "",
-	"input-label-published": "",
-	"input-label-quantity": "",
-	"input-label-rate": "",
-	"input-label-sale-price": "",
-	"input-label-search": "",
-	"input-label-select-icon": "",
-	"input-label-select-platform": "",
-	"input-label-serial": "",
-	"input-label-serial-help-text": "",
-	"input-label-shipping-class": "",
-	"input-label-shippings": "",
-	"input-label-site-subtitle": "",
-	"input-label-site-title": "",
-	"input-label-sku": "",
-	"input-label-social-url": "",
-	"input-label-state": "",
-	"input-label-status": "",
-	"input-label-street-address": "",
-	"input-label-tax-class": "",
-	"input-label-taxes": "",
-	"input-label-token": "",
-	"input-label-twitter-card-type": "",
-	"input-label-twitter-handle": "",
-	"input-label-type": "",
-	"input-label-types": "",
-	"input-label-unit": "",
-	"input-label-value": "",
-	"input-label-vendor-id": "",
-	"input-label-website": "",
-	"input-label-width": "",
-	"input-label-zip": "",
-	"input-placeholder-order-status": "",
-	"input-placeholder-search": "",
-	"input-title": "",
-	"item-description": "",
-	"item-description-add": "",
-	"item-description-choose": "",
-	"item-description-edit": "",
-	"item-description-update": "",
-	"link-register-shop-owner": "",
-	"logo-dimension-help-text": "",
-	"logo-help-text": "",
-	"order-status-description-helper-text": "",
-	"password-help-text": "",
-	"payment-info-helper-text": "",
-	"placeholder-search-location": "",
-	"product-description-help-text": "",
-	"profile-info-help-text": "",
-	"promotional-slider": "",
-	"promotional-slider-help-text": "",
-	"shipping-form-info-help-text": "",
-	"shop-address": "",
-	"shop-address-helper-text": "",
-	"shop-basic-info": "",
-	"shop-basic-info-help-text": "",
-	"shop-cover-image-help-text": "",
-	"shop-cover-image-title": "",
-	"shop-logo-help-text": "",
-	"shop-payment-info": "",
-	"shop-settings": "",
-	"shop-settings-helper-text": "",
-	"site-info-help-text": "",
-	"tag-description-helper-text": "",
-	"tag-image-helper-text": "",
-	"tax-form-info-help-text": "",
-	"tax-form-seo-info-help-text": "",
-	"text-already-account": "",
-	"text-customer": "",
-	"text-delivery-schedule": "",
-	"text-no-account": "",
-	"text-register": "",
-	"text-reset-password": "",
-	"text-staff": "",
-	"text-store-owner": "",
-	"text-submit-email": "",
-	"text-submit-token": "",
-	"text-super-admin": "",
-	"token-label": "",
-	"total-variation-added": "",
-	"type-and-category": "",
-	"type-and-category-help-text": "",
-	"update-attribute-value": "",
-	"withdraw-description-helper-text": ""
+	"input-label-order-id": "Захиалгын дугаар",
+	"input-label-order-status": "Захиалгын байдал",
+	"input-label-orders": "Захиалга",
+	"input-label-parent-category": "Эцэг эхийн ангилал",
+	"input-label-password": "нууц үг",
+	"input-label-payment-method": "Төлбөрийн нөхцөл",
+	"input-label-percentage": "хувь",
+	"input-label-price": "Үнэ",
+	"input-label-product-card-type": "Бүтээгдэхүүний картыг сонгоно уу",
+	"input-label-products": "Бүтээгдэхүүн",
+	"input-label-published": "Нийтэлсэн",
+	"input-label-quantity": "Тоо хэмжээ",
+	"input-label-rate": "Үнэлгээ",
+	"input-label-sale-price": "Хямдарсан үнэ",
+	"input-label-search": "Хайлт хийх",
+	"input-label-select-icon": "Дүрсийг сонгоно уу",
+	"input-label-select-platform": "Нийгмийн платформыг сонгоно уу",
+	"input-label-serial": "Цуврал",
+	"input-label-serial-help-text": "Захиалгын төлөв дараах байдалтай байх ёстой (жишээ нь: 1-[9])",
+	"input-label-shipping-class": "Хүргэлтийн ангилал",
+	"input-label-shippings": "Хүргэлт",
+	"input-label-site-subtitle": "Сайтын хадмал гарчиг",
+	"input-label-site-title": "Сайтын гарчиг",
+	"input-label-sku": "ску",
+	"input-label-social-url": "Профайл url нэмнэ үү",
+	"input-label-state": "Муж",
+	"input-label-status": "Статус",
+	"input-label-street-address": "Гудамжны хаяг",
+	"input-label-tax-class": "Татварын ангилал",
+	"input-label-taxes": "Татвар",
+	"input-label-token": "Имэйлээс авсан токеноо тавь",
+	"input-label-twitter-card-type": "Twitter картын төрөл",
+	"input-label-twitter-handle": "Twitter бариул",
+	"input-label-type": "Төрөл",
+	"input-label-types": "Төрөл",
+	"input-label-unit": "Нэгж",
+	"input-label-value": "Утга",
+	"input-label-vendor-id": "Борлуулагчийн ID",
+	"input-label-website": "Вэбсайт",
+	"input-label-width": "Өргөн",
+	"input-label-zip": "ZIP",
+	"input-placeholder-order-status": "Захиалгын байдал",
+	"input-placeholder-search": "Асуултаа бичээд enter дарна уу",
+	"input-title": "Гарчиг",
+	"item-description": "Тайлбар",
+	"item-description-add": "Нэмэх",
+	"item-description-choose": "Сонгох",
+	"item-description-edit": "Засах",
+	"item-description-update": "Шинэчлэх",
+	"link-register-shop-owner": "Дэлгүүрийн эзэмшигчээр бүртгүүлнэ үү",
+	"logo-dimension-help-text": "Логоны хэмжээ нь байх ёстой",
+	"logo-help-text": "Сайтын логог эндээс байршуулна уу.",
+	"order-status-description-helper-text": "статусыг эндээс захиалах",
+	"password-help-text": "Эндээс нууц үгээ солино уу",
+	"payment-info-helper-text": "Төлбөрийн мэдээллээ эндээс нэмнэ үү",
+	"placeholder-search-location": "Байршлын маягтыг эндээс хайна уу",
+	"product-description-help-text": "таны бүтээгдэхүүний тодорхойлолт болон шаардлагатай мэдээллийг эндээс авна уу",
+	"profile-info-help-text": "Эндээс профайлын мэдээллээ оруулна уу",
+	"promotional-slider": "Сурталчилгааны слайдерууд",
+	"promotional-slider-help-text": "Сурталчилгааны гулсагчуудыг байршуулах",
+	"shipping-form-info-help-text": "таны тээвэрлэлтийн тодорхойлолт болон шаардлагатай мэдээллийг эндээс авна уу",
+	"shop-address": "Дэлгүүрийн хаяг",
+	"shop-address-helper-text": "Эндээс дэлгүүрийн хаягаа оруулна уу",
+	"shop-basic-info": "Үндсэн мэдээлэл",
+	"shop-basic-info-help-text": "Дэлгүүрийнхээ талаарх үндсэн мэдээллийг эндээс нэмнэ үү",
+	"shop-cover-image-help-text": "Дэлгүүрийнхээ хавтасны зургийг эндээс байршуулна уу",
+	"shop-cover-image-title": "Хавтасны зураг",
+	"shop-logo-help-text": "Дэлгүүрийнхээ логог эндээс байршуулна уу",
+	"shop-payment-info": "Төлбөрийн мэдээлэл",
+	"shop-settings": "Дэлгүүрийн тохиргоо",
+	"shop-settings-helper-text": "Эндээс дэлгүүрийн тохиргооны мэдээллээ нэмнэ үү",
+	"site-info-help-text": "Сайтын мэдээллээ эндээс өөрчилнө үү",
+	"tag-description-helper-text": "Таны шошгоны дэлгэрэнгүй мэдээлэл болон шаардлагатай мэдээллийг эндээс авна уу",
+	"tag-image-helper-text": "Та шошгоны зургаа энд байршуулна уу",
+	"tax-form-info-help-text": "Татварын мэдээллийг эндээс авна уу",
+	"tax-form-seo-info-help-text": "Эндээс сайтынхаа SEO-г өөрчилнө үү",
+	"text-already-account": "данстай юу?",
+	"text-customer": "Хэрэглэгч",
+	"text-delivery-schedule": "Хүргэлтийн хуваарь",
+	"text-no-account": "Бүртгэлгүй юу?",
+	"text-register": "Бүртгүүлэх",
+	"text-reset-password": "Нууц үгээ анхны байдалд нь оруулж",
+	"text-staff": "Ажилтнууд",
+	"text-store-owner": "Дэлгүүрийн эзэн",
+	"text-submit-email": "Имэйл илгээх",
+	"text-submit-token": "Токен илгээх",
+	"text-super-admin": "Супер админ",
+	"token-label": "Имэйлээс авсан токеноо тавь",
+	"total-variation-added": "Хувилбар",
+	"type-and-category": "Бүлэг, ангилал",
+	"type-and-category-help-text": "Эндээс бүтээгдэхүүний бүлэг, ангиллыг сонгоно уу",
+	"update-attribute-value": "Аттрибутын утгыг шинэчлэх",
+	"withdraw-description-helper-text": "хүсэлтээ эндээс буцаана уу"
 }
