--- a/apps/dashboard/public/locales/mn/common.json
+++ b/apps/dashboard/public/locales/mn/common.json
@@ -7,7 +7,7 @@
 	"MARVEL_ERROR.OPERATION_NOT": "Үйл ажиллагаа Үгүй",
 	"MARVEL_ERROR.PAYMENT_FAILED": "Төлбөр амжилтгүй боллоо",
 	"MARVEL_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "Facebook эсвэл Google ашиглан нэвтэрнэ үү",
-	"MARVEL_ERROR.SHOP_NOT_APPROVED": "Дэлгүүр зөвшөөрөгдөөгүй",
+	"MARVEL_ERROR.SHOP_NOT_APPROVED": "Байгууллага зөвшөөрөгдөөгүй",
 	"MARVEL_ERROR.SOMETHING_WENT_WRONG": "Ямар нэгэн зүйл буруугаар эргэсэн",
 	"MARVEL_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "Татан авалтыг дэлгүүрт хавсаргасан байх ёстой",
 	"MARVEL_ERROR.WRONG_CSV": "Та буруу csv файл байршуулсан байна!",
@@ -95,7 +95,7 @@
 	"serial-required": "Цуврал шаардлагатай",
 	"shipping-address": "Хүргэлтийн хаяг",
 	"sidebar-nav-item-attribute-value": "Атрибутын утгууд",
-	"sidebar-nav-item-attributes": "Атрибутууд",
+	"sidebar-nav-item-attributes": "Шүүлт",
 	"sidebar-nav-item-categories": "Ангилалууд",
 	"sidebar-nav-item-coupons": "Купон",
 	"sidebar-nav-item-dashboard": "Хяналтын самбар",
@@ -112,7 +112,7 @@
 	"sidebar-nav-item-tags": "Шошго",
 	"sidebar-nav-item-taxes": "Татвар",
 	"sidebar-nav-item-users": "Хэрэглэгчид",
-	"sidebar-nav-item-withdraws": "Татаж авдаг",
+	"sidebar-nav-item-withdraws": "Буцаалт",
 	"signing-out-text": "Гарч байна...",
 	"status-required": "Статус шаардлагатай",
 	"successfully-created": "Амжилттай үүсгэлээ!",
@@ -127,21 +127,21 @@
 	"text-active": "Идэвхтэй",
 	"text-add-your": "Өөрийгөө нэмнэ үү",
 	"text-amount": "Хэмжээ",
-	"text-approve-shop": "Дэлгүүрийг зөвшөөрөх",
+	"text-approve-shop": "Байгууллагийг зөвшөөрөх",
 	"text-approved": "Зөвшөөрсөн",
 	"text-ban-user": "Хэрэглэгчийг хориглох",
 	"text-bank": "Банк",
 	"text-banner": "Баннер",
 	"text-commission-rate": "Админ комиссын хувь",
-	"text-create-shop": "Дэлгүүр үүсгэх",
+	"text-create-shop": "Байгууллага үүсгэх",
 	"text-current-balance": "Одоогийн үлдэгдэл",
 	"text-delete": "Устгах",
 	"text-details": "Дэлгэрэнгүй мэдээлэл",
-	"text-disabled": "Тахир дутуу",
-	"text-disapprove-shop": "Дэлгүүрийг зөвшөөрөхгүй",
+	"text-disabled": "Идэвхигүй болгосон",
+	"text-disapprove-shop": "Байгууллагийг зөвшөөрөхгүй",
 	"text-download": "Татаж авах",
 	"text-edit": "Засах",
-	"text-edit-shop": "Дэлгүүр засах",
+	"text-edit-shop": "Байгууллага засах",
 	"text-email": "И-мэйл",
 	"text-enabled": "Идэвхжүүлсэн байна",
 	"text-export-attributes": "Экспортын шинж чанарууд",
@@ -164,7 +164,7 @@
 	"text-name": "Нэр",
 	"text-no-address": "Хаяг олдсонгүй",
 	"text-no-contact": "Холбоо барих дугаар алга",
-	"text-no-shop": "Дэлгүүр олдсонгүй",
+	"text-no-shop": "Байгууллага олдсонгүй",
 	"text-note": "тэмдэглэл",
 	"text-on-hold": "Хүлээлтэнд байна",
 	"text-or": "эсвэл",
@@ -172,7 +172,7 @@
 	"text-payment-info": "Төлбөрийн мэдээлэл",
 	"text-payment-method": "Төлбөрийн нөхцөл",
 	"text-pending": "Хүлээгдэж байна",
-	"text-permission-message": "Таны дэлгүүр хараахан идэвхжээгүй байна. Та цаашдын үйлдлийг үргэлжлүүлэх боломжгүй.",
+	"text-permission-message": "Таны Байгууллага хараахан идэвхжээгүй байна. Та цаашдын үйлдлийг үргэлжлүүлэх боломжгүй.",
 	"text-processing": "Боловсруулж байна",
 	"text-products": "Бүтээгдэхүүн",
 	"text-px": "px",
@@ -183,7 +183,7 @@
 	"text-revenue": "Орлого",
 	"text-shop-approve-button": "Илгээх",
 	"text-shop-approve-description": "Чи итгэлтэй байна уу?",
-	"text-shop-approve-title": "Дэлгүүрийг зөвшөөрөхгүй",
+	"text-shop-approve-title": "Байгууллагийг зөвшөөрөхгүй",
 	"text-shop-dashboard": "Хяналтын самбарыг харах",
 	"text-status": "Статус",
 	"text-total-orders": "Нийт захиалга",
@@ -192,7 +192,7 @@
 	"text-upload-message": "эсвэл чирэх, буулгах",
 	"text-view": "Харах",
 	"text-visit-shop": "Дэлгүүрт зочилно уу",
-	"text-withdrawal-info": "Татгалзах мэдээлэл",
+	"text-withdrawal-info": "Буцаалтын мэдээлэл",
 	"token-required": "Та токен хаягаа оруулах шаардлагатай",
 	"type-required": "Төрөл шаардлагатай",
 	"update-success": "Амжилттай шинэчлэгдсэн!",
