--- a/apps/dashboard/public/locales/mn/table.json
+++ b/apps/dashboard/public/locales/mn/table.json
@@ -1,7 +1,7 @@
 {
 	"empty-table-data": "Өгөгдөл олдсонгүй",
-	"popular-products-table-title": "Алдартай бүтээгдэхүүн",
-	"recent-order-table-title": "сүүлийн үеийн захиалга",
+	"popular-products-table-title": "Эрэлттэй",
+	"recent-order-table-title": "сүүлийн захиалга",
 	"table-item-actions": "Үйлдэл",
 	"table-item-active": "Идэвхтэй",
 	"table-item-amount": "Хэмжээ",
